# fn-research

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile.rust  Dockerfile.test.rust  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
baseline-research/: brief-parallel.ron  session.ron
crates/research-api/: Cargo.toml
crates/research-api/src/: http.rs  lib.rs  link.rs  progress.rs  response.rs  traits.rs
crates/research-api/src/parallel/: mod.rs  support.rs
crates/research-api/src/valyu/: mod.rs  status.rs
crates/research-api/src/xai/: brief.rs  cache.rs  citations.rs  mod.rs
crates/research-api/src/xai/bridge/: collect.rs  fetch.rs  mod.rs
crates/research-cli/: Cargo.toml
crates/research-cli/src/: execute.rs  launch.rs  main.rs  print.rs  seed.rs  support.rs
crates/research-domain/: Cargo.toml
crates/research-domain/src/: brief.rs  ids.rs  lib.rs  processor.rs  provider.rs
crates/research-domain/src/pending/: mod.rs  tests.rs
crates/research-domain/src/result/: mod.rs  tests.rs
crates/research-domain/src/session/: mod.rs  tests.rs
crates/research-domain/src/task/: mod.rs  tests.rs
crates/research-image/: Cargo.toml
crates/research-image/src/: frame.rs  generator.rs  lib.rs
crates/research-pdf/: Cargo.toml
crates/research-pdf/src/: lib.rs  palette.rs  style.rs  wave.rs
crates/research-pdf/src/document/: citations.rs  data.rs  env.rs  mod.rs  sources.rs  tasks.rs  text.rs
crates/research-storage/: Cargo.toml
crates/research-storage/src/: file.rs  lib.rs  organizer.rs
crates/research-storage/src/repository/: mod.rs  read.rs  tests.rs  write.rs
resources/: style.css
resources/cover/: canvas.json  color_palette.json  composition_guidelines.json  generation_process.json  locations_library.json  meta.json  metaphor_elements_library.json  parts.json  quality_requirements.json  style_definition.json  surface_treatment.json  topic.json  topic_to_visual_mapping.json  wabi_sabi.json
src/research/: main.clj
src/research/api/: parallel.clj  response.clj  valyu.clj
src/research/api/valyu/: status.clj
src/research/api/xai/: brief.clj
src/research/domain/: brief.clj  pending.clj  session.clj  task.clj
src/research/image/: frame.clj  generator.clj
src/research/main/: execute.clj  launch.clj  seed.clj
src/research/pdf/: document.clj
src/research/pdf/document/: env.clj  text.clj
src/research/storage/: repository.clj
src/research/storage/repository/: read.clj  write.clj
test/research/: main_test.clj
test/research/api/: parallel_test.clj
test/research/api/valyu/: status_test.clj
test/research/api/xai/: brief_test.clj
test/research/domain/: pending_test.clj  session_test.clj  task_test.clj
test/research/image/: generator_test.clj
test/research/pdf/: document_test.clj
test/research/storage/: repository_test.clj
