[package]
name = "research-image"
version = "0.1.0"
edition = "2021"

[dependencies]
research-domain = { path = "../research-domain" }
base64 = { workspace = true }
edn-rs = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
research-domain = { path = "../research-domain", features = ["test-support"] }
